# ClaudeCraft

./: .eslintrc.json  .gitignore  CLAUDE.md  LICENSE  README.md  framework-workflow.md  package.json  pyproject.toml  workflow.md
.claude/: settings.local.json
claudecraft/: __init__.py
development/: stack-junkie-labs-implementation-plan.md
docs/: agent-workflows.md  best-practices.md
docs/rules/: global-rules.md  handoff-rules.md  security-rules.md
lab-config/agents/: coder-agent.md  reviewer-agent.md
lab-config/templates/: project-claude.md
test-project/.github/: PULL_REQUEST_TEMPLATE.md
test-project/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
test-project/lab-config/agents/: documenter-agent.md  planner-agent.md
test-project/lab-config/rules/: handoff-rules.md
test-project/lab-config/templates/: handoff-template.md
test-sample/framework-copy/: .gitignore  README.md  setup-project.sh
test-sample/framework-copy/.github/workflows/: backend-ci.yml  frontend-ci.yml
test-sample/framework-copy/docs/: setup-guide.md
test-sample/framework-copy/lab-config/agents/: tester-agent.md
test-sample/framework-copy/lab-config/rules/: global-rules.md  security-rules.md
workspace/: README.md  prd.md
workspace/agent-instructions/: coder-agent.md  documenter-agent.md  planner-agent.md  reviewer-agent.md  tester-agent.md
workspace/templates/: bug-tracker.md  memory-bank.md  prd-template.md  progress-log.md  todo.md
