[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudecraft"
version = "1.0.1"
description = "Multi-Agent Development Framework for High-Quality, Secure Software Development with Claude AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ClaudeCraft Team", email = "hello@claudecraft.dev"}
]
maintainers = [
    {name = "ClaudeCraft Team", email = "hello@claudecraft.dev"}
]
keywords = [
    "claude",
    "ai", 
    "framework",
    "development",
    "multi-agent",
    "security",
    "quality",
    "template",
    "react",
    "python",
    "nodejs",
    "automation",
    "workflow"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/stack-junkie/ClaudeCraft"
Documentation = "https://github.com/stack-junkie/ClaudeCraft#readme"
Repository = "https://github.com/stack-junkie/ClaudeCraft.git"
"Bug Tracker" = "https://github.com/stack-junkie/ClaudeCraft/issues"

[project.scripts]
claudecraft-init = "claudecraft:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudecraft*"]

[tool.setuptools.package-data]
claudecraft = [
    "setup-project.sh",
    "docs/**/*",
    "workspace/**/*",
    "CLAUDE.md",
    "framework-workflow.md"
]